# GLOVE

./: .gitignore  .travis.yml  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  CodingStyle.md  Makefile  README.md  android_build.sh  configure.sh  update_external_sources.py  update_external_sources.sh
Demos/: CMakeLists.txt  README_demos.md
Demos/assets/: CMakeLists.txt
Demos/assets/geometry/: cube.h  screen_quad.h  triangle.h
Demos/assets/shaders/: geometry3d_textures.frag  geometry3d_textures.vert  texture2d_filter_boxblur.frag  texture2d_filter_gamma.frag  texture2d_filter_grayscale.frag  texture2d_filter_invert.frag  texture2d_filter_sobel.frag
Demos/assets/textures/: vulkan_512x512.dds  vulkan_512x512.pvr
Demos/demos/: CMakeLists.txt  circle2d_sdf.c  circle2d_sdf.h  cube3d_textures.c  cube3d_textures.h  cube3d_vertexcolors.c  cube3d_vertexcolors.h  plist.in  render_to_texture_filter_boxblur.c  render_to_texture_filter_boxblur.h  render_to_texture_filter_gamma.c  render_to_texture_filter_gamma.h  render_to_texture_filter_grayscale.c  render_to_texture_filter_grayscale.h  render_to_texture_filter_invert.c  render_to_texture_filter_invert.h  render_to_texture_filter_sobel.c  render_to_texture_filter_sobel.h  run_all_samples.bat  run_all_samples.sh  run_all_samples_mac.sh  texture2d_color.c  texture2d_color.h  triangle2d_one_color.c  triangle2d_one_color.h  triangle2d_split_colors.c  triangle2d_split_colors.h
Demos/demos/ios/: LaunchScreen.storyboard  main.m
Demos/demos/macOS/: Main.storyboard
Demos/eglut/: CMakeLists.txt  eglut.c  eglut_ios.m  eglut_ios_app.h  eglut_ios_app.m  eglut_macos.c  eglut_macos.m  eglut_macos_app.h  eglut_macos_app.m  eglut_native.c  eglut_wayland.c  eglut_windows.c  eglut_x11.c  eglutint.h
Demos/engine/: CMakeLists.txt
Demos/engine/asset_manager/: shaderManager.c  shaderManager.h  texLoader.c  texLoader.h  tgaLoader.c
Demos/engine/glcore/: common.h
Demos/engine/renderer/: framebufferobject.h  rendering.h  shaderprogram.c  shaderprogram.h
Demos/engine/scenegraph/: mesh.c  mesh.h
Demos/engine/utilities/: debug.h  linmath.h  profiler.c  profiler.h  smoke_tests.c  smoke_tests.h
Demos/ref/: circle2d_sdf.rgba  cube3d_textures.rgba  cube3d_vertexcolors.rgba  render_to_texture_filter_boxblur.rgba  render_to_texture_filter_gamma.rgba  render_to_texture_filter_grayscale.rgba  render_to_texture_filter_invert.rgba  render_to_texture_filter_sobel.rgba  texture2d_color.rgba  triangle2d_one_color.rgba  triangle2d_split_colors.rgba
Demos/tools/: offline_shader_compiler.c
EGL/source/: CMakeLists.txt
EGL/source/api/: egl.cpp  egl.def  eglConfig.cpp  eglConfig.h  eglConfig_android.h  eglConfig_ios.h  eglConfig_linux.h  eglConfig_windows.h  eglContext.cpp  eglContext.h  eglDisplay.cpp  eglDisplay.h  eglFunctions.h  eglGlobalResourceManager.cpp  eglGlobalResourceManager.h  eglRefObject.cpp  eglRefObject.h  eglSurface.cpp  eglSurface.h
EGL/source/display/: displayDriver.cpp  displayDriver.h  displayDriverResourceManager.cpp  displayDriverResourceManager.h  displayDriversContainer.cpp  displayDriversContainer.h
EGL/source/platform/: platformFactory.cpp  platformFactory.h  platformWindowInterface.h
EGL/source/rendering_api/: rendering_api.c  rendering_api.h
EGL/source/thread/: renderingThread.cpp  renderingThread.h
EGL/source/utils/: androidLoggerImpl.h  eglLogger.cpp  eglUtils.cpp  eglUtils.h  egl_defs.h  simpleLoggerImpl.h
GLES/: CMakeLists.txt
GLES/include/KHR/: khrplatform.h
GLES/source/: CMakeLists.txt
GLES/source/api/: eglInterface.cpp  gl.cpp  gl.def  glFunctions.h
GLES/source/context/: context.cpp  context.h  contextBufferObject.cpp  contextFrameBuffer.cpp  contextRenderBuffer.cpp  contextRendering.cpp  contextShader.cpp  contextShaderProgram.cpp  contextStateFragmentOperations.cpp  contextStateFramebufferOperations.cpp  contextStateManager.cpp  contextStatePixelOperations.cpp  contextStateQueries.cpp  contextStateRasterization.cpp  contextStateViewportTransformation.cpp  contextTexture.cpp  contextUtilities.cpp  contextVertexAttributes.cpp
GLES/source/glslang/: FixSampler.cpp  FixSampler.h  glslangCompiler.cpp  glslangCompiler.h  glslangIoMapResolver.cpp  glslangIoMapResolver.h  glslangLinker.cpp  glslangLinker.h  glslangShaderCompiler.cpp  glslangShaderCompiler.h  glslangUtils.cpp  glslangUtils.h  glslang_utils.h  shaderConverter.cpp  shaderConverter.h
GLES/source/resources/: bufferObject.cpp  bufferObject.h  framebuffer.cpp  framebuffer.h  genericVertexAttribute.cpp  genericVertexAttribute.h  genericVertexAttributes.cpp  genericVertexAttributes.h  rect.cpp  rect.h  refObject.cpp  refObject.h  renderbuffer.cpp  renderbuffer.h  resourceManager.cpp  resourceManager.h  sampler.h  screenSpacePass.cpp  screenSpacePass.h  shader.cpp  shader.h  shaderCompiler.h  shaderProgram.cpp  shaderProgram.h  shaderReflection.cpp  shaderReflection.h  shaderResourceInterface.cpp  shaderResourceInterface.h  slangCompiler.h  texture.cpp  texture.h  uniformBufferObject.cpp  uniformBufferObject.h
GLES/source/state/: stateActiveObjects.cpp  stateActiveObjects.h  stateFragmentOperations.cpp  stateFragmentOperations.h  stateFramebufferOperations.cpp  stateFramebufferOperations.h  stateManager.cpp  stateManager.h  stateViewportTransformation.h
GLES/source/utils/: GlToVkConverter.cpp  GlToVkConverter.h  Patch.h  Text.cpp  Twine.cpp  Twine.h  VkToGlConverter.cpp  androidLoggerImpl.h  arrays.hpp  cacheManager.cpp  cacheManager.h  color.hpp  glLogger.cpp  glLogger.h  glUtils.cpp  glUtils.h  globals.h  glsl_types.h  parser_helpers.cpp  parser_helpers.h
GLES/source/vulkan/: buffer.cpp  buffer.h  caches.cpp  caches.h  cbManager.cpp  cbManager.h  clearPass.cpp  clearPass.h  commandBufferManager.cpp  commandBufferManager.h  commandBufferPool.cpp  commandBufferPool.h  context.cpp  context.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  imageView.cpp  imageView.h  memory.cpp  memory.h  memoryAllocator.cpp  memoryAllocator.h  pipeline.cpp  (+12 more)
GLES/unitTests/: CMakeLists.txt  arrays_tests.cpp
(+49 files in other folders)
